--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "description": "REST service starter for RS School",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "nodemon src/app.js",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
@@ -45,8 +45,12 @@
   },
   "dependencies": {
     "cross-env": "7.0.3",
+    "directory-import": "^2.3.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "fastify": "^3.24.1",
+    "lodash": "^4.17.21",
+    "lodash.foreach": "^4.5.0",
     "swagger-ui-express": "4.1.6",
     "uuid": "8.3.2",
     "yamljs": "0.3.0"
