--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "description": "REST service starter for RS School",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon",
+    "build": "tsc src/server.ts",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
@@ -44,22 +46,27 @@
     ]
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "bash": "^0.0.1",
     "cross-env": "7.0.3",
     "directory-import": "^2.3.0",
     "dotenv": "10.0.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "express": "4.17.1",
     "fastify": "^3.24.1",
-    "lodash": "^4.17.21",
-    "lodash.foreach": "^4.5.0",
     "swagger-ui-express": "4.1.6",
+    "ts-migrate": "^0.1.26",
+    "ts-node": "^10.4.0",
     "uuid": "8.3.2",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.12",
     "chai": "4.3.4",
     "debug": "4.3.2",
     "dirty-chai": "2.0.1",
-    "eslint": "8.2.0",
+    "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
@@ -70,6 +77,7 @@
     "lint-staged": "12.0.3",
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
-    "supertest": "6.1.6"
+    "supertest": "6.1.6",
+    "typescript": "^4.5.2"
   }
 }
