--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "module": "commonjs",
         "outDir": "dist",
         "sourceMap": true,
+        "esModuleInterop": true,
         "noImplicitAny": true,
         "strict": true
       },
