--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "express": "4.17.1",
     "fastify": "^3.24.1",
+    "fastify-plugin": "^3.0.0",
     "swagger-ui-express": "4.1.6",
     "ts-migrate": "^0.1.26",
     "ts-node": "^10.4.0",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.12",
+    "@types/uuid": "^8.3.3",
     "chai": "4.3.4",
     "debug": "4.3.2",
     "dirty-chai": "2.0.1",
@@ -78,6 +80,6 @@
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
     "supertest": "6.1.6",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.3"
   }
 }
