--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
     "supertest": "6.1.6",
+    "typedoc": "^0.22.10",
     "typescript": "^4.5.3"
   }
 }
