--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
         "strict": true
       },
     "include": ["src/**/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "typedocOptions": {
+      "entryPoints": ["src/server.ts"],
+      "out": "docs"
+  }
 
 }
