--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "fastify": "^3.24.1",
     "fastify-plugin": "^3.0.0",
+    "pino": "^7.6.1",
     "pino-pretty": "^7.3.0",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.4.0",
