--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
 LOG_LEVEL=info
+POSTGRES_PORT=4001
