--- a/package.json
+++ b/package.json
@@ -56,15 +56,20 @@
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@types/uuid": "^8.3.3",
+    "chai": "^4.3.4",
     "debug": "4.3.2",
+    "dirty-chai": "^2.0.1",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
+    "jest": "^27.4.7",
     "lint-staged": "12.0.3",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "supertest": "^6.2.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3"
   }
