--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         "sourceMap": true,
         "esModuleInterop": true,
         "noImplicitAny": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "strict": true
       },
     "include": ["src/**/*.ts"],
