--- a/.env
+++ b/.env
@@ -3,9 +3,8 @@ PORT=4000
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
-MONGO_CONNECTION_STRING=your-mongo-db-connection-string
 LOG_LEVEL=info
 POSTGRES_PORT=4001
-POSTGRES_USER=''
-POSTGRES_PASSWORD=123
-POSTGRES_DB=''
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=postgres
