--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,26 @@
 {
     "compilerOptions":
       {
-        "target": "es2018",
+        "target": "es2020",
         "module": "commonjs",
-        "outDir": "dist",
-        "sourceMap": true,
+        "allowJs": false,
+        "outDir": "./build",
+        "rootDir": "./src",
+        "downlevelIteration": false,
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUncheckedIndexedAccess": true,
+        "noPropertyAccessFromIndexSignature": false,
+        "moduleResolution": "node",
         "esModuleInterop": true,
-        "noImplicitAny": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "strict": true
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "strictPropertyInitialization": false
       },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
