--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 LOG_LEVEL=info
 POSTGRES_PORT=4001
+POSTGRES_CONTAINERPORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=postgres
+POSTGRES_HOST=postgres
