--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "description": "REST service starter for RS School",
   "main": "src/server.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon",
+    "start": "ts-node ./src/server.ts",
+    "dev": "npm run migration:generate && npm run migration:run && nodemon",
     "build": "tsc src/server.ts",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
@@ -55,7 +55,9 @@
     "pino": "^7.6.1",
     "pino-pretty": "^7.3.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.4.0",
     "typeorm": "^0.2.41",
+    "typescript": "^4.5.4",
     "uuid": "8.3.2",
     "yamljs": "0.3.0"
   },
@@ -75,8 +77,6 @@
     "lint-staged": "12.0.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "supertest": "^6.2.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.3"
+    "supertest": "^6.2.0"
   }
 }
