--- a/rest/docker-compose copy.yml
+++ b/rest/docker-compose copy.yml
@@ -18,12 +18,12 @@ services:
       POSTGRES_HOST: postgres
     restart: always 
   postgres:
-    build: ./src/database
+    build: ./src/db
     container_name: database
     networks:
       - myNet
     ports:
-      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+      - ${POSTGRES_CONTAINERPORT}:${POSTGRES_CONTAINERPORT}
     volumes:
       - pg_data:/var/lib/postgressql/data/pgdata    
     environment:
