--- a/rest/package.json
+++ b/rest/package.json
@@ -26,12 +26,14 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.2.6",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "fastify-swagger": "^4.13.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
