--- a/rest/.env
+++ b/rest/.env
@@ -8,5 +8,5 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=postgres
 POSTGRES_HOST=localhost
-JWT_SECRET=@z#rt6
+JWT_SECRET=@zrt6
 USE_FASTIFY=false
