--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
 NODE_ENV=development
 PORT=3000
 AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 LOG_LEVEL=info
-POSTGRES_PORT=4001
-POSTGRES_CONTAINERPORT=5432
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=postgres
-POSTGRES_HOST=postgres
-JWT_SECRET=@z#rt6
+POSTGRES_HOST=localhost
+JWT_SECRET=@zrt6
+USE_FASTIFY=false
