--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
-  "name": "rs-rest-service-starter",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
+  "name": "rest",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "type": "commonjs",
-  "description": "REST service starter for RS School",
-  "main": "src/server.js",
   "scripts": {
-    "start": "ts-node ./src/server.ts",
-    "dev": "npm run migration:generate && npm run migration:run && nodemon -L",
-    "build": "tsc src/server.ts",
-    "lint": "eslint --ext .js,.ts --fix src/",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "npm run migration:generate && npm run migration:run && nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js --config ./src/common/ormconfig.ts",
+    "typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/common/ormconfig.ts",
     "migration:generate": "npm run typeorm migration:generate -- -n MigrationFile",
     "migration:run": "npm run typeorm -- migration:run"
-  },
-  "keywords": [
-    "rs",
-    "school",
-    "rest",
-    "node",
-    "express",
-    "autotest",
-    "starter"
-  ],
-  "license": "ISC",
-  "engines": {
-    "node": ">=16.0.0 <17"
   },
   "jest": {
     "testEnvironment": "node",
@@ -38,50 +27,55 @@
       "./test/setup.js"
     ]
   },
-  "lint-staged": {
-    "src/**/*.js": [
-      "npm run lint"
-    ]
-  },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.2.6",
+    "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
-    "cross-env": "7.0.3",
-    "dotenv": "10.0.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "fastify": "^3.24.1",
-    "fastify-plugin": "^3.0.0",
-    "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cross-env": "^7.0.3",
+    "debug": "^4.3.2",
+    "dotenv": "^16.0.0",
+    "fastify-swagger": "^4.13.1",
+    "mysql2": "^2.3.3",
     "pg": "^8.7.1",
-    "pino": "^7.6.1",
-    "pino-pretty": "^7.3.0",
+    "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.4.0",
-    "typeorm": "^0.2.41",
-    "typescript": "^4.5.4",
-    "uuid": "8.3.2",
-    "yamljs": "0.3.0"
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^16.11.19",
-    "@types/uuid": "^8.3.3",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "27.0.2",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "chai": "^4.3.4",
-    "debug": "4.3.2",
     "dirty-chai": "^2.0.1",
-    "eslint": "^8.4.1",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.7",
-    "lint-staged": "12.0.3",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.5.1",
-    "supertest": "^6.1.6"
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   }
 }
